--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 80%;
 }
 #replay {
-    width: 200px;
-    height: 50px;
+    width: 50vw;
+    height: 10vw;
     background-color: darkblue;
     color: white;
     border-radius: 5px;
@@ -16,4 +16,6 @@
     border: tomato;
     border-radius: 3px;
     align-content: center;
+    font-size:10vw;
+    text-align: center;
 }
